fix: link contrast in footer

--- a/apps/tup-cms/src/taccsite_custom/tup_cms/static/tup_cms/css/for-tup-cms/components/c-footer.css
+++ b/apps/tup-cms/src/taccsite_custom/tup_cms/static/tup_cms/css/for-tup-cms/components/c-footer.css
@@ -231,3 +231,12 @@ html#page-portal .c-footer p {
 #cms-footer .c-pane--common a {
     color: var(--global-color-primary--xx-light);
 }
+#cms-footer .c-pane--common a {
+    text-decoration-line: underline;
+    text-decoration-color: var(--global-color-primary--dark);
+
+    &:hover {
+      text-decoration-color: inherit;
+    }
+}
+
